# taxicab

./: .gitignore  AGENTS.md  LICENSE  README.md  SECURITY.md  dow_holdings.xlsx  pyproject.toml  spy_holdings.xlsx  us100_holdings.xlsx
.github/workflows/: ci.yml
scripts/: check  e2e_ci
src/taxicab/: __init__.py  cli.py  comparison.py  data.py  metric_registry.py  metrics.py  optimizer.py  rebalance.py  report.py
tests/: test_cli.py  test_data.py  test_metric_registry.py  test_metrics.py  test_optimizer.py  test_rebalance.py
